cicd: 환경변수 추출 오류 해결 - 서브쉘 제거

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,6 +29,7 @@ jobs:
               echo "$key=$value" >> "$GITHUB_ENV"
             fi
           done < .env.filtered
+          echo "build path : ${{ env.NEXT_BUILD_PATH }}"
 
       - name: Setup Node
         uses: actions/setup-node@v3
@@ -50,7 +51,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build-files
-          path: ${{ env.BUILD_PATH }}
+          path: ${{ env.NEXT_BUILD_PATH }}
 
   deploy:
     needs: build
@@ -78,7 +79,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: build-files
-          path: ${{ env.BUILD_PATH }}
+          path: ${{ env.NEXT_BUILD_PATH }}
 
       - name: Configure AWS CLI
         uses: aws-actions/configure-aws-credentials@v2
@@ -96,7 +97,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ env.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ env.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ env.AWS_REGION }}
-          SOURCE_DIR: ${{ env.BUILD_PATH }}
+          SOURCE_DIR: ${{ env.NEXT_BUILD_PATH }}
 #
 #      - name: Invalidate CloudFront cache
 #        if: success()
