--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,7 +30,7 @@ jobs:
             fi
           done < .env.filtered
           echo "build path : ${{ env.NEXT_BUILD_PATH }}"
-          echo "aws access key: ${{ env.AWS_ACCESS_KEY_ID }}
+          echo "aws access key: ${{ env.AWS_ACCESS_KEY_ID }}"
 
       - name: Setup Node
         uses: actions/setup-node@v3
