--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,8 +29,6 @@ jobs:
               echo "$key=$value" >> "$GITHUB_ENV"
             fi
           done < .env.filtered
-          echo "build path : ${{ env.NEXT_BUILD_PATH }}"
-          echo "aws access key: ${{ env.AWS_ACCESS_KEY_ID }}"
 
       - name: Setup Node
         uses: actions/setup-node@v3
@@ -72,6 +70,10 @@ jobs:
             fi
           done < .env.filtered
       
+      - name: logging
+        run: |
+          echo "build path: ${{ env.NEXT_BUILD_PATH }}"
+          echo "aws access key: ${{ env.AWS_ACCESS_KEY_ID }}"
 
       - name: Checkout source
         uses: actions/checkout@v3
