--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,13 @@
 {
   "extends": [
-    "next/core-web-vitals",
-    "prettier"
+    "next/core-web-vitals"
   ],
-  "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": "error",
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "off",
-    "no-unused-vars": "warn",
+    "@typescript-eslint/no-unused-vars": "warn",
     "no-console": "warn",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn"
-  },
-  "env": {
-    "browser": true,
-    "es2021": true,
-    "node": true
   }
 }
